<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/start_button"
        android:layout_alignParentTop="true"
        android:layout_weight="1"
        android:fillViewport="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/LinearLayout01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/product_edit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/product_edit_name"
                    android:imeOptions="actionNext"></EditText>
            </LinearLayout>


            <ImageView
                android:id="@+id/detail_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:src="@android:drawable/ic_menu_report_image" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/detail_received" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <Button
                    android:id="@+id/detail_received_increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="changeAmount"
                    android:text="@string/symbol_plus"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_received"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    tools:text="5" />

                <Button
                    android:id="@+id/detail_received_decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="changeAmount"
                    android:text="@string/symbol_minus"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/detail_sold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/detail_sold_increment"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="changeAmount"
                    android:text="@string/symbol_plus"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_sold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    tools:text="5" />

                <Button
                    android:id="@+id/detail_sold_decrement"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="changeAmount"
                    android:text="@string/symbol_minus"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/detail_stock" />

                <TextView
                    android:id="@+id/detail_stock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="5" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/detail_price" />

                <EditText
                    android:id="@+id/detail_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/product_edit_price"
                    android:imeOptions="actionDone"
                    android:inputType="phone"></EditText>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="2dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/detail_vendor" />

                <EditText
                    android:id="@+id/detail_vendor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:hint="@string/product_edit_vendor"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"></EditText>

            </LinearLayout>

            <Button
                android:id="@+id/order_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/delete_button"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/button_order" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/save_button"
                android:text="@string/button_delete" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/button_save"></Button>


        </LinearLayout>
    </ScrollView>
</LinearLayout>

