<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:layout_gravity="center"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/button_sale"
        android:onClick="sellProduct"
        android:textAllCaps="true"
        android:id="@+id/sale"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="1"
            android:textSize="18sp"
            android:textStyle="bold">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/row_price"
                android:textSize="14sp"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/price"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:lines="1"
                android:text="0">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="14sp"
                android:text="@string/row_sold"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/sold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="14sp"
                tools:text="0"
                android:text="0">
            </TextView>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="1dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="14sp"
                android:text="@string/row_stock"
                android:textStyle="italic">
            </TextView>
            <TextView
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:textSize="14sp"
                tools:text="0"
                android:text="0">
            </TextView>

        </LinearLayout>

    </LinearLayout>



</LinearLayout>

